# IFJ

./: CMakeLists.txt  GridWidget.h  _E01.zvaz  _E02.zvaz  _E04.zvaz  _H01.zvaz  _H02.zvaz  _H03.zvaz  _M02.zvaz  _M03.zvaz  _M04.zvaz  _M05.zvaz  f (1).txt  main.cpp  readme.txt  resources.qrc  squarebutton.cpp  squarebutton.h  win.ui  zarovka.cpp  zarovka.h  zarovka.ui
BE/: CMakeLists.txt  be.cpp  game.cpp  game.h  gametypes.h
resources/mainlevels/: _E03.zvaz  _E05.zvaz  _H04.zvaz  _H05.zvaz  _M01.zvaz  _M05.zvaz
